<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.Drifty</groupId>
    <artifactId>Drifty</artifactId>
    <version>2.0.0</version>
    <name>Drifty</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
        <javafx.version>20</javafx.version>
        <gluonfx-maven-plugin.version>1.0.19</gluonfx-maven-plugin.version>
        <native-maven-plugin.version>0.9.13</native-maven-plugin.version>
        <guiMain>GUI.Launcher</guiMain>
        <cliMain>CLI.Drifty_CLI</cliMain>
        <package.type/>
        <mac.app.store/>
        <resource-config-file/>
        <system-native-image-arg/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.10.0</version>
        </dependency>
        <dependency>
            <groupId>org.buildobjects</groupId>
            <artifactId>jproc</artifactId>
            <version>2.8.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.graalvm.nativeimage/library-support -->
        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>library-support</artifactId>
            <version>23.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.graalvm.sdk/graal-sdk -->
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>23.0.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--Maven Compiler Plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>20</source>
                    <target>20</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${guiMain}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <!-- GUI native image builder plugin-->
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${guiMain}</mainClass>
                    <nativeImageArgs>
                        <arg>--enable-url-protocols=https</arg>
                        <arg>--enable-url-protocols=http</arg>
                        <arg>--no-fallback</arg>
                        <arg>--verbose</arg>
                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                        <arg>${system-native-image-arg}</arg>
                    </nativeImageArgs>
                    <appIdentifier>${guiMain}</appIdentifier>
                    <releaseConfiguration>
                        <vendor>Drifty</vendor>
                        <description>Drifty is an open-source interactive file downloader system</description>
                        <packageType>${package.type}</packageType>
                        <!-- for macOS/iOS -->
                        <macAppStore>${mac.app.store}</macAppStore>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <bundleVersion>${project.version}</bundleVersion>
                    </releaseConfiguration>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <!-- [Windows] CLI native image builder profile -->
            <id>build-drifty-cli-for-windows-latest</id>
            <properties>
                <resource-config-file>resource-config-windows.json</resource-config-file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <outputDirectory>target/CLI/windows</outputDirectory>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- [Linux] CLI native image builder profile -->
            <id>build-drifty-cli-for-ubuntu-latest</id>
            <properties>
                <resource-config-file>resource-config-linux.json</resource-config-file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <outputDirectory>target/CLI/linux</outputDirectory>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- [macOS] CLI native image builder profile -->
            <id>build-drifty-cli-for-macos-latest</id>
            <properties>
                <resource-config-file>resource-config-mac.json</resource-config-file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <outputDirectory>target/CLI/macos</outputDirectory>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>-H:ResourceConfigurationFiles=${pom.basedir}/config/${resource-config-file}</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- [macOS] GUI native image builder profile -->
            <id>build-drifty-gui-for-macos-latest</id>
            <properties>
                <package.type>pkg</package.type>
                <system-native-image-arg>--add-exports=org.graalvm.nativeimage.Platform$DARWIN_AMD64</system-native-image-arg>
                <resource-config-file>resource-config-mac.json</resource-config-file>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
        <profile>
            <!-- [Linux] GUI native image builder profile -->
            <id>build-drifty-gui-for-ubuntu-latest</id>
            <properties>
                <resource-config-file>resource-config-linux.json</resource-config-file>
            </properties>
        </profile>
        <profile>
            <!-- [Windows] GUI native image builder profile -->
            <id>build-drifty-gui-for-windows-latest</id>
            <properties>
                <package.type>msi</package.type>
                <resource-config-file>resource-config-windows.json</resource-config-file>
            </properties>
        </profile>
    </profiles>
</project>
